--- a/src/backdrops/FilterProviders/locales/en.json
+++ b/src/backdrops/FilterProviders/locales/en.json
@@ -8,7 +8,8 @@
   "female": "Female",
   "unspecified": "Unspecified",
   "provider_type_checkbox_group_label": "Provider type",
-  "provider_sex_checkbox_group_label": "Gender of the provider",
+  "provider_sex_checkbox_group_label": "Sex of the provider",
+  "not_mentioned": "Prefer not to say",
   "max_price": "Maximum price",
   "max_price_placeholder": "Select a maximum price",
   "language": "Language",
