--- a/src/backdrops/FilterProviders/locales/ru.json
+++ b/src/backdrops/FilterProviders/locales/ru.json
@@ -7,6 +7,7 @@
   "male": "Мужчина",
   "female": "Женщина",
   "unspecified": "Не указан",
+  "not_mentioned": "Предпочитаю не говорить",
   "provider_type_checkbox_group_label": "Вид консультанта",
   "provider_sex_checkbox_group_label": "Пол консультанта",
   "max_price": "Максимальная цена",
@@ -16,6 +17,6 @@
   "providers_free_consultation_label": "Только бесплатная консультация",
   "button_label": "Примените фильтры",
   "reset_filter": "Сбросить фильтр",
-    "available_before": "Доступно до",
+  "available_before": "Доступно до",
   "available_after": "Доступно после"
 }
