--- a/src/backdrops/FilterProviders/locales/kk.json
+++ b/src/backdrops/FilterProviders/locales/kk.json
@@ -7,6 +7,7 @@
   "male": "Ер",
   "female": "Әйел",
   "unspecified": "Көрсетілмеген",
+  "not_mentioned": "Айтпауды жөн көремін",
   "provider_type_checkbox_group_label": "Консультант түрі",
   "provider_sex_checkbox_group_label": "Консультанттын жынысы",
   "max_price": "Ең жоғары баға",
