--- a/src/blocks/ConsultationsDashboard/locales/ru.json
+++ b/src/blocks/ConsultationsDashboard/locales/ru.json
@@ -5,7 +5,7 @@
   "live_text": "Сейчас",
   "accept_button_label": "Принять консультацию",
   "join_button_label": "Присоединиться",
-  "change_button_label": "Изменить пароль",
+  "change_button_label": "Изменить дату",
   "ordinal_st": "-ый",
   "ordinal_nd": "-ой",
   "ordinal_rd": "-ий",
