--- a/src/backdrops/FilterQuestions/locales/en.json
+++ b/src/backdrops/FilterQuestions/locales/en.json
@@ -2,5 +2,6 @@
     "heading": "Filter questions by tag",
     "dropdown_label": "Select a tag",
     "cta_label": "Apply filters",
-    "secondary_cta_label": "Reset filters"
+    "secondary_cta_label": "Reset filters",
+    "dropdown_placeholder": "Select a tag"
 }
