--- a/src/backdrops/FilterQuestions/locales/kk.json
+++ b/src/backdrops/FilterQuestions/locales/kk.json
@@ -2,5 +2,6 @@
     "heading": "Тег бойынша сұрағыңызды сүзгіден өткізіңіз",
     "dropdown_label": "Тегті таңдаңыз",
     "cta_label": "Сүзгілерді қолданыңыз",
-    "secondary_cta_label": "Сүзгілерді қалпына келтіру"
+    "secondary_cta_label": "Сүзгілерді қалпына келтіру",
+    "dropdown_placeholder": "Тегті таңдаңыз"
 }
