--- a/src/backdrops/FilterQuestions/locales/ru.json
+++ b/src/backdrops/FilterQuestions/locales/ru.json
@@ -2,5 +2,6 @@
     "heading": "Фильтровать вопросы по тегу",
     "dropdown_label": "Выберите тег",
     "cta_label": "Примените фильтры",
-    "secondary_cta_label": "Сбросить фильтры"
+    "secondary_cta_label": "Сбросить фильтры",
+    "dropdown_placeholder": "Выберите тег"
 }
