--- a/src/blocks/RegisterAboutYou/locales/kk.json
+++ b/src/blocks/RegisterAboutYou/locales/kk.json
@@ -15,5 +15,8 @@
   "place_of_living_rural": "Ауыл",
   "sex_error": "Өтінеміз, жынысыңызды көрсетіңіз",
   "year_of_birth_error": "Өтінеміз, туған жылыңызды көрсетіңіз",
-  "place_of_living_error": "Өтінеміз, тұрғылықты жеріңізді көрсетіңіз"
+  "place_of_living_error": "Өтінеміз, тұрғылықты жеріңізді көрсетіңіз",
+  "sex_placeholder": "Жынысыңызды енгізіңіз",
+  "year_of_birth_placeholder": "Туған жылыңызды енгізіңіз",
+  "living_place_placeholder": "Тұрғылықты жеріңізді енгізіңіз"
 }
