--- a/src/blocks/UserDetails/locales/en.json
+++ b/src/blocks/UserDetails/locales/en.json
@@ -35,5 +35,8 @@
   "data_processing_modal_text": "You will not be able to schedule further consultations.",
   "data_processing_modal_confirm_button": "Remove permission",
   "data_processing_modal_cancel_button": "Cancel",
-  "success_message": "Profile updated successfully"
+  "success_message": "Profile updated successfully",
+  "sex_placeholder": "Enter your sex",
+  "year_of_birth_placeholder": "Enter your year of birth",
+  "living_place_placeholder": "Enter your living place"
 }
