--- a/src/blocks/UserDetails/locales/ru.json
+++ b/src/blocks/UserDetails/locales/ru.json
@@ -35,5 +35,8 @@
   "data_processing_modal_text": "Вы не сможете запланировать дальнейшие консультации.",
   "data_processing_modal_confirm_button": "Удалить разрешение",
   "data_processing_modal_cancel_button": "Отмена",
-  "success_message": "Профиль успешно обновлен"
+  "success_message": "Профиль успешно обновлен",
+  "sex_placeholder": "Введите свой пол",
+  "year_of_birth_placeholder": "Введите свой год рождения",
+  "living_place_placeholder": "Введите место вашего жительства"
 }
