Remove: russian ordinals and change month names in russian

--- a/src/blocks/MascotWelcomeHeader/locales/ru.json
+++ b/src/blocks/MascotWelcomeHeader/locales/ru.json
@@ -11,21 +11,21 @@
   "live_label": "Сейчас",
   "no_consultations": "В настоящее время у Вас нет предстоящих консультаций",
   "free": "Свободно",
-  "ordinal_st": "-ый",
-  "ordinal_nd": "-ой",
-  "ordinal_rd": "-ий",
-  "ordinal_th": "-ый",
-  "january": "январь",
-  "february": "февраль",
-  "march": "март",
-  "april": "апрель",
-  "may": "май",
-  "june": "июнь",
-  "july": "июль",
-  "august": "август",
-  "september": "сентябрь",
-  "october": "октябрь",
-  "november": "ноябрь",
-  "december": "декабрь",
+  "ordinal_st": "",
+  "ordinal_nd": "",
+  "ordinal_rd": "",
+  "ordinal_th": "",
+  "january": "января",
+  "february": "февраля",
+  "march": "марта",
+  "april": "апреля",
+  "may": "мая",
+  "june": "июня",
+  "july": "июля",
+  "august": "августа",
+  "september": "сентября",
+  "october": "октября",
+  "november": "ноября",
+  "december": "декабря",
   "coupon": "Купон"
 }
