--- a/src/modals/MoodTrackMoreInformation/locales/ru.json
+++ b/src/modals/MoodTrackMoreInformation/locales/ru.json
@@ -1,20 +1,20 @@
 {
   "you_felt": "Вы почувствовали",
   "comment_text": "и Вы прокомментировали",
-  "ordinal_st": "-ый",
-  "ordinal_nd": "-ой",
-  "ordinal_rd": "-ий",
-  "ordinal_th": "-ый",
-   "january": "Январь",
-  "february": "Февраль",
-  "march": "Март",
-  "april": "Апрель",
-  "may": "Май",
-  "june": "Июнь",
-  "july": "Июль",
-  "august": "Август",
-  "september": "Сентябрь",
-  "october": "Октябрь",
-  "november": "Ноябрь",
-  "december": "Декабрь"
+  "ordinal_st": "",
+  "ordinal_nd": "",
+  "ordinal_rd": "",
+  "ordinal_th": "",
+  "january": "января",
+  "february": "февраля",
+  "march": "марта",
+  "april": "апреля",
+  "may": "мая",
+  "june": "июня",
+  "july": "июля",
+  "august": "августа",
+  "september": "сентября",
+  "october": "октября",
+  "november": "ноября",
+  "december": "декабря"
 }
