Add: missing translations

--- a/src/blocks/RegisterAnonymous/locales/ru.json
+++ b/src/blocks/RegisterAnonymous/locales/ru.json
@@ -14,5 +14,6 @@
   "copy_text": "Скопируйте и сохраните или запишите свой анонимный код, если Вы его потеряете, то больше не сможете получить доступ к своему аккаунту.",
   "copy_success": "Успешно скопированный код",
   "confirm_password_label": "Подтвердите пароль",
-  "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают"
+  "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают",
+  "age_terms_agreement_text_1": "Мне больше 13 лет"
 }
