--- a/src/blocks/RegisterPreview/locales/kk.json
+++ b/src/blocks/RegisterPreview/locales/kk.json
@@ -8,5 +8,5 @@
   "text_2": "USupport сіздің игілігіңіз үшін кедергісіз, жеке әрі жылдам психологиялық көмек ұсынады",
   "heading_3": "Сіз жайлы",
   "text_3": "Сіздің оқиғаңыз маңызды. Батыл бөлісіңіз.",
-  "login": "Login with Email/Access TokenKK"
+  "login": "Электрондық пошта/токен белгісі көмегімен кіру"
 }
