--- a/src/modals/RequireDataAgreement/locales/kk.json
+++ b/src/modals/RequireDataAgreement/locales/kk.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Do you give us permission to use your data as defined by the privacy policy?KK",
+  "heading": "Сіз бізге құпиялылық саясатына сәйкес дербес деректеріңізді өңдеуге рұқсат бересіз бе?",
   "text": "Сіздің жеке ақпаратыңыз ашылмайды, бұл рұқсат тек клиникалық деректер және чат тарихында өңдеу және сақтау үшін платформада пайдаланылады.",
   "text2": "Егер Сіз дербес деректерді өңдеу жайлы көбірек білгіңіз келсе танысып шығыңыз - біздің ",
   "terms": "Шарттар мен ережелер",
