--- a/src/blocks/RegisterAnonymous/locales/kk.json
+++ b/src/blocks/RegisterAnonymous/locales/kk.json
@@ -14,5 +14,6 @@
   "copy_text": "Анонимді кодты көшіріп алып, сақтап қойыңыз немесе жазып алыңыз, егер оны жоғалтып алсаңыз, аккаунтыңызға кіре алмайсыз.",
   "copy_success": "Сәтті көшірілген код",
   "confirm_password_label": "Құпия сөзді растаңыз",
-  "password_match_error": "Құпия сөз және Құпия сөзді растау өрістері сәйкес келмейді"
+  "password_match_error": "Құпия сөз және Құпия сөзді растау өрістері сәйкес келмейді",
+  "age_terms_agreement_text_1": "Менің жасым 13-тен үлкен"
 }
