--- a/src/blocks/RegisterEmail/locales/kk.json
+++ b/src/blocks/RegisterEmail/locales/kk.json
@@ -14,5 +14,6 @@
   "paragraph": "Немесе келесілер арқылы тіркеліңіз:",
   "login_button_label": "Менің аккаунтым бар",
   "confirm_password_label": "Құпия сөзді растаңыз",
-  "password_match_error": "Құпия сөз және Құпия сөзді растау өрістері сәйкес келмейді"
+  "password_match_error": "Құпия сөз және Құпия сөзді растау өрістері сәйкес келмейді",
+  "age_terms_agreement_text_1": "Менің жасым 13-тен үлкен"
 }
