--- a/src/blocks/RegisterEmail/locales/ru.json
+++ b/src/blocks/RegisterEmail/locales/ru.json
@@ -14,5 +14,6 @@
   "paragraph": "Или зарегистрируйтесь через:",
   "login_button_label": "У меня уже есть аккаунт",
   "confirm_password_label": "Подтвердите пароль",
-  "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают"
+  "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают",
+  "age_terms_agreement_text_1": "Мне больше 13 лет"
 }
