--- a/src/blocks/UserDetails/locales/kk.json
+++ b/src/blocks/UserDetails/locales/kk.json
@@ -18,7 +18,7 @@
   "button_text": "Өзгерістерді сақтау",
   "button_secondary_text": "Өзгерістерді болдырмау",
   "privacy": "Құпиялық және қауіпсіздік",
-  "consent": "Дербес деректерді өңдеуге келісім беру",
+  "consent": "Дербес деректерді өңдеуге келісім беру, осыған сәйкес <0>Privacy Policy</0>",
   "change_password": "Құпия сөзді өзгерту",
   "delete_account": "Аккаунтты жою",
   "logout": "Шығу",
@@ -31,7 +31,7 @@
   "sex_none": "Айтпауды жөн көремін",
   "place_of_living_urban": "Қала",
   "place_of_living_rural": "Ауыл",
-  "data_processing_modal_heading": "Are you sure you want to remove the permission to use your personal data as defined by the <0>Privacy Policy</0>?KK",
+  "data_processing_modal_heading": "Дербес деректеріңізді өңдеуге берген рұқсатыңызды кері қайтарып алғыңыз келетініне сенімдісіз бе, осыған сәйкес <0>Privacy Policy</0>?",
   "data_processing_modal_text": "Сіз қосымша кеңес беруді жоспарлай алмайсыз.",
   "data_processing_modal_confirm_button": "Рұқсатты жою",
   "data_processing_modal_cancel_button": "Болдырмау",
