--- a/src/blocks/Notifications/locales/en.json
+++ b/src/blocks/Notifications/locales/en.json
@@ -15,5 +15,6 @@
   "accept_consultation_success": "Succesfully accepted consultation",
   "reject": "Reject",
   "reject_consultation_success": "Succesfully rejected consultation",
-  "no_notifications": "You have no notifications yet."
+  "no_notifications": "You have no notifications yet.",
+  "yesterday": "yesterday"
 }
