--- a/src/blocks/Notifications/locales/kk.json
+++ b/src/blocks/Notifications/locales/kk.json
@@ -15,5 +15,6 @@
   "accept_consultation_success": "Консультация сәтті қабылданды",
   "reject": "Бас тарту",
   "reject_consultation_success": "Консультациядан сәтті бас тарттыңыз",
-  "no_notifications": "Сізде әлі хабарландырулар жоқ."
+  "no_notifications": "Сізде әлі хабарландырулар жоқ.",
+  "yesterday": "кеше"
 }
