--- a/src/backdrops/SafetyFeedback/locales/en.json
+++ b/src/backdrops/SafetyFeedback/locales/en.json
@@ -1,6 +1,6 @@
 {
-    "heading": "Did you felt safe during the meeting",
-    "subheading": "Tell us more about the experience you got throught the last consultation you had. ",
+    "heading": "Did you feel safe during the meeting?",
+    "subheading": "Tell us more about the experience you had through the last consultation you had.",
     "option_yes_label": "Yes",
     "option_no_label": "No",
     "cta_button_label": "Send feedback",
