--- a/src/pages/RegisterEmail/locales/kk.json
+++ b/src/pages/RegisterEmail/locales/kk.json
@@ -1,3 +1,3 @@
 {
-  "heading": "Usupport сайтында электронды пошта арқылы тіркеліңіз"
+  "heading": "USupport сайтында электронды пошта арқылы тіркеліңіз"
 }
