--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -18,7 +18,8 @@
   "button_text": "Перейти к приложению",
   "contact_us": "Свяжитесь с нами",
   "your_profile_text": "Ваш профиль",
-  "password": "Пароль",
+  "password_placeholder": "Пароль",
+  "password": "Пожалуйста, введите пароль для доступа к сайту",
   "wrong_password": "Неверный пароль",
   "submit": "Отправить"
 }
