--- a/src/blocks/RegisterEmail/locales/en.json
+++ b/src/blocks/RegisterEmail/locales/en.json
@@ -15,5 +15,6 @@
   "login_button_label": "I already have an account",
   "confirm_password_label": "Confirm password",
   "password_match_error": "The Password and Confirm Password fields do not match",
-  "age_terms_agreement_text_1": "I am over 13 years old"
+  "age_terms_agreement_text_1": "I am over 13 years old",
+  "language": "Language"
 }
