--- a/src/blocks/RegisterEmail/locales/ru.json
+++ b/src/blocks/RegisterEmail/locales/ru.json
@@ -15,5 +15,6 @@
   "login_button_label": "У меня уже есть аккаунт",
   "confirm_password_label": "Подтвердите пароль",
   "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают",
-  "age_terms_agreement_text_1": "Мне больше 13 лет"
+  "age_terms_agreement_text_1": "Мне больше 13 лет",
+  "language": "Язык"
 }
