Refactor: Add translations to send message placeholder

--- a/src/pages/Consultation/locales/en.json
+++ b/src/pages/Consultation/locales/en.json
@@ -27,5 +27,6 @@
   "show_options": "Settings",
   "search": "Search",
   "sponsored_by": "This session is sponsored by: ",
-  "consultation_end_reminder": "Your consultation will end in {{minutes}} minutes"
+  "consultation_end_reminder": "Your consultation will end in {{minutes}} minutes",
+  "textarea_placeholder": "Type your message here..."
 }
