--- a/src/pages/Consultation/locales/kk.json
+++ b/src/pages/Consultation/locales/kk.json
@@ -27,5 +27,6 @@
   "show_options": "Баптаулар",
   "search": "Іздеу",
   "sponsored_by": "Бұл сессияның демеушісі: ",
-  "consultation_end_reminder": "Сіздің консультацияңыз {{minutes}} минуттан кейін аяқталады"
+  "consultation_end_reminder": "Сіздің консультацияңыз {{minutes}} минуттан кейін аяқталады",
+  "textarea_placeholder": "Хабарламаңызды осы жерге енгізіңіз..."
 }
