--- a/src/pages/Consultation/locales/ru.json
+++ b/src/pages/Consultation/locales/ru.json
@@ -27,5 +27,6 @@
   "show_options": "Настройки",
   "search": "Поиск",
   "sponsored_by": "Эта сессия спонсируется: ",
-  "consultation_end_reminder": "Ваша консультация закончится через {{minutes}} минут"
+  "consultation_end_reminder": "Ваша консультация закончится через {{minutes}} минут",
+  "textarea_placeholder": "Введите Ваше сообщение здесь..."
 }
