--- a/src/blocks/Login/locales/ru.json
+++ b/src/blocks/Login/locales/ru.json
@@ -6,5 +6,7 @@
   "forgot_password_label": "Я забыл(-а) свой пароль",
   "login_label": "Авторизация",
   "paragraph": "Или войдите с помощью:",
-  "register_button_label": "У меня нет аккаунта"
+  "register_button_label": "У меня нет аккаунта",
+  "heading": "Добро пожаловать в",
+  "client": "Клиент"
 }
