--- a/src/pages/RegisterEmail/locales/ru.json
+++ b/src/pages/RegisterEmail/locales/ru.json
@@ -1,3 +1,3 @@
 {
-  "heading": "Зарегистрируйтесь с помощью электронной почты в USupport"
+  "heading": "Зарегистрируйтесь с помощью электронной почты в uSupport"
 }
