Add: user guide buttom to UserProfile

--- a/src/blocks/UserProfile/locales/en.json
+++ b/src/blocks/UserProfile/locales/en.json
@@ -13,5 +13,6 @@
   "mood_tracker_button_label": "Mood tracker",
   "payments_history_button_label": "Payment History",
   "terms_of_use": "Terms of use",
-  "cookie_policy": "Cookie policy"
+  "cookie_policy": "Cookie policy",
+  "user_guide": "Platform usage"
 }
