--- a/src/blocks/UserProfile/locales/kk.json
+++ b/src/blocks/UserProfile/locales/kk.json
@@ -13,5 +13,6 @@
   "mood_tracker_button_label": "Көңіл-күй трекері",
   "payments_history_button_label": "Төлем тарихы",
   "terms_of_use": "Пайдалану шарттары",
-  "cookie_policy": "Cookie саясаты"
+  "cookie_policy": "Cookie саясаты",
+  "user_guide": "Платформа Нұсқаулығы"
 }
