--- a/src/blocks/UserProfile/locales/ru.json
+++ b/src/blocks/UserProfile/locales/ru.json
@@ -13,5 +13,6 @@
   "mood_tracker_button_label": "Трекер настроения",
   "payments_history_button_label": "История платежей",
   "terms_of_use": "Условия использования",
-  "cookie_policy": "Политика Cookie"
+  "cookie_policy": "Политика Cookie",
+  "user_guide": "Руководство по платформе"
 }
