--- a/src/blocks/Page/locales/kk.json
+++ b/src/blocks/Page/locales/kk.json
@@ -21,5 +21,8 @@
   "password_placeholder": "Құпия сөз",
   "password": "Сайтқа кіру үшін құпия сөзіңізді енгізіңіз",
   "wrong_password": "Құпия сөз дұрыс емес",
-  "submit": "Жіберу"
+  "submit": "Жіберу",
+
+  "dark": "Қараңғы",
+  "light": "Жарық"
 }
