--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -21,5 +21,8 @@
   "password_placeholder": "Пароль",
   "password": "Пожалуйста, введите пароль для доступа к сайту",
   "wrong_password": "Неверный пароль",
-  "submit": "Отправить"
+  "submit": "Отправить",
+
+  "dark": "Тёмный",
+  "light": "Светлый"
 }
