Refactor: adjust translations as per v1.11 version

--- a/src/blocks/RegisterPreview/locales/ru.json
+++ b/src/blocks/RegisterPreview/locales/ru.json
@@ -1,12 +1,12 @@
 {
   "register_email": "Зарегистрируйтесь с помощью электронной почты",
-  "register_anonymously": "Получить доступ анонимно",
+  "register_anonymously": "Зарегистрироваться без электронной почты",
   "continue_as_guest": "Продолжить без регистрации",
   "heading_1": "О платформе",
-  "text_1": "Первая платформа, созданная, чтобы сделать ваше психическое здоровье приоритетом, предоставляя персонализированную психологическую помощь.",
+  "text_1": "Платформа uSupport основана на соблюдении принципов конфиденциальности и Вашей безопасности. Ваше ментальное благополучие — наш приоритет! uSupport предоставляет персонализированную, профессиональную и доступную психологическую поддержку.",
   "heading_2": "О поддержке",
-  "text_2": "uSupport предоставляет персонализированную, ненавязчивую и быструю психологическую помощь для вашего общего благополучия.",
+  "text_2": "uSupport - это платформа по поддержке ментального здоровья и консультированию молодых людей, их родителей/опекунов, где конфиденциальность и безопасность в приоритете.",
   "heading_3": "О Вас",
-  "text_3": "Ваша история имеет значение! Смело делитесь.",
+  "text_3": "Станьте лучшей версией себя! Ваше ментальное здоровье имеет значение.",
   "login": "Войти с помощью электронной почты/Токена доступа "
 }
