--- a/src/blocks/UserProfile/locales/kk.json
+++ b/src/blocks/UserProfile/locales/kk.json
@@ -14,5 +14,5 @@
   "payments_history_button_label": "Төлем тарихы",
   "terms_of_use": "Пайдалану шарттары",
   "cookie_policy": "Cookie саясаты",
-  "user_guide": "Платформа Нұсқаулығы"
+  "user_guide": "Платформа нұсқаулығы"
 }
