--- a/src/pages/Consultation/locales/ru.json
+++ b/src/pages/Consultation/locales/ru.json
@@ -28,6 +28,6 @@
   "show_options": "Настройки",
   "search": "Поиск",
   "sponsored_by": "Эта сессия спонсируется: ",
-  "consultation_end_reminder": "Ваша консультация закончится через {{minutes}} минут",
+  "consultation_end_reminder": "Сіздің консультацияңыз {{minutes}} минуттан кейін аяқталады",
   "textarea_placeholder": "Введите Ваше сообщение здесь..."
 }
