Add: missing uk and pl translations

--- a/src/blocks/ActivityHistory/locales/uk.json
+++ b/src/blocks/ActivityHistory/locales/uk.json
@@ -22,5 +22,5 @@
   "provider_microphone_off": "Консультант(ка) вимкнув(ла) мікрофон",
   "provider_microphone_on": "Консультант(ка) увімкнув(ла) мікрофон",
   
-  "exported_at": "Exported at: {{time}}"
+  "exported_at": "Експортновано о {{time}}"
 }
