--- a/src/blocks/ForgotPassword/locales/uk.json
+++ b/src/blocks/ForgotPassword/locales/uk.json
@@ -5,6 +5,6 @@
   "register_redirect_button_label": "Я не маю облікового запису.",
   "modal_heading": "Перевірте електронну пошту",
   "modal_text": "Якщо Ви зареєстровані на платформі, то отримаєте посилання для відновлення паролю.",
-  "client": "Client",
+  "client": "Клієнт",
   "heading": "Ласкаво просимо до"
 }
