--- a/src/blocks/Login/locales/uk.json
+++ b/src/blocks/Login/locales/uk.json
@@ -7,6 +7,6 @@
   "login_label": "Логін",
   "paragraph": "Або увійдіть за допомогою:",
   "register_button_label": "Я не маю облікового запису.",
-  "client": "Client",
+  "client": "Клієнт",
   "heading": "Ласкаво просимо до"
 }
