--- a/src/blocks/Page/locales/uk.json
+++ b/src/blocks/Page/locales/uk.json
@@ -2,7 +2,7 @@
   "page_1": "Головна",
   "page_2": "Консультації",
   "page_3": "Інформаційний портал",
-  "page_4": "Мої запитання й відповіді",
+  "page_4": "Q&A",
 
   "footer_1": "Головна",
   "footer_2": "Консультації",
