--- a/src/blocks/SafetyFeedback/locales/uk.json
+++ b/src/blocks/SafetyFeedback/locales/uk.json
@@ -2,7 +2,7 @@
   "heading": "Це важливо. Будь ласка, прочитайте й заповніть",
   "subheading": "Будь ласка, дайте правдиві відповіді на всі запитання.",
   "warning": "Відповідаючи, Ви заявляєте, що ця заява є правдивою, і Ви робите її, знаючи, що надання свідомо неправдивої заяви є правопорушенням.",
-  "q0": "Did the provider attend the consultation session?",
+  "q0": "Чи був/ла консультант/ка присутня/ій на сеансі?",
   "q1": "Чи просив(ла) консультант(ка) розкрити адресу й контактні дані? ",
   "q2": "Чи просив(ла) консультант(ка) зустрітися з ним поза системою (особисто або в іншому додатку)?",
   "q3": "Чи просив(ла) Вас консультант(ка) надіслати фотографії або увімкнути відео?",
