--- a/src/blocks/ActivityHistory/locales/pl.json
+++ b/src/blocks/ActivityHistory/locales/pl.json
@@ -22,5 +22,5 @@
   "provider_microphone_off": "Konsultant wyłączył mikrofon",
   "provider_microphone_on": "Konsultant włączył mikrofon",
   
-  "exported_at": "Exported at: {{time}}"
+  "exported_at": "Wyeksportowano o: {{time}}"
 }
