--- a/src/blocks/ForgotPassword/locales/pl.json
+++ b/src/blocks/ForgotPassword/locales/pl.json
@@ -5,6 +5,6 @@
   "register_redirect_button_label": "Nie mam konta",
   "modal_heading": "Sprawdź swoją skrzynkę e-mail",
   "modal_text": "Jeśli jesteś zarejestrowany na platformie, otrzymasz link do zresetowania hasła.",
-  "client": "Client",
+  "client": "Klient",
   "heading": "Witamy w"
 }
