--- a/src/blocks/Login/locales/pl.json
+++ b/src/blocks/Login/locales/pl.json
@@ -7,6 +7,6 @@
   "login_label": "Logowanie",
   "paragraph": "Lub zaloguj się za pomocą:",
   "register_button_label": "Nie mam konta",
-  "client": "Client",
+  "client": "Klient",
   "heading": "Witamy w"
 }
