--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -2,7 +2,7 @@
   "page_1": "Главная страница",
   "page_2": "Консультации",
   "page_3": "Информационный портал",
-  "page_4": "Мой Q&A",
+  "page_4": "Q&A",
 
   "footer_1": "Главная страница",
   "footer_2": "Консультации",
@@ -23,6 +23,6 @@
   "wrong_password": "Неверный пароль",
   "submit": "Отправить",
 
-  "dark": "Тёмный",
+  "dark": "Ciemny",
   "light": "Светлый"
 }
