--- a/src/blocks/SafetyFeedback/locales/pl.json
+++ b/src/blocks/SafetyFeedback/locales/pl.json
@@ -2,7 +2,7 @@
   "heading": "To ważne. Przeczytaj i wypełnij",
   "subheading": "Odpowiedz zgodnie z prawdą na wszystkie pytania.",
   "warning": "Odpowiadając, oświadczasz, że to oświadczenie jest prawdziwe i składasz je, wiedząc, że złożenie oświadczenia, o którym wiesz, że jest nieprawdziwe, jest przestępstwem.",
-  "q0": "Did the provider attend the consultation session?",
+  "q0": "Czy konsultant dołączył do sesji?",
   "q1": "Czy konsultant poprosił Cię o ujawnienie adresu i szczegółów kontaktowych? ",
   "q2": "Czy konsultant poprosił Cię o spotkanie poza systemem (osobiście lub w innej aplikacji)?",
   "q3": "Czy konsultant poprosił cię o przesłanie zdjęć lub włączenie wideo, nawet jeśli tego nie chciałeś?",
