--- a/src/pages/Consultation/locales/uk.json
+++ b/src/pages/Consultation/locales/uk.json
@@ -29,5 +29,5 @@
   "search": "Пошук",
   "sponsored_by": "Ця сесія відбувається за підтримки ",
   "consultation_end_reminder": "Консультація завершиться за {{minutes}} хвилин",
-  "textarea_placeholder": "Type your message here..."
+  "textarea_placeholder": "Введіть Ваше повідомлення тут..."
 }
