Add: missing uk translations

--- a/src/blocks/Page/locales/uk.json
+++ b/src/blocks/Page/locales/uk.json
@@ -11,7 +11,7 @@
   "footer_5": "Умови й положення",
   "footer_6": "Політика конфіденційності",
   "footer_7": "Налаштування файлів cookie",
-  "footer_8": "ПОШИРЕНІ ЗАПИТАННЯ",
+  "footer_8": "Поширені запитання",
 
   "emergency_button": "SOS-центр",
 
@@ -19,10 +19,10 @@
   "contact_us": "Зв'яжіться з нами",
   "your_profile_text": "Ваш профіль",
   
-  "password_placeholder": "Password", 
-  "password": "Please enter your password to access the site",
-  "wrong_password": "Wrong password",
-  "submit": "Submit",
+  "password_placeholder": "Пароль", 
+  "password": "Будь ласка, введіть Ваш пароль для доступу на сайт",
+  "wrong_password": "Невірний пароль",
+  "submit": "Надіслати",
 
   "dark": "Темний",
   "light": "Світлий"
