--- a/src/blocks/RegisterPreview/locales/uk.json
+++ b/src/blocks/RegisterPreview/locales/uk.json
@@ -3,10 +3,10 @@
   "register_anonymously": "Зареєструватися без електронної пошти",
   "continue_as_guest": "Продовжити без реєстрації",
   "heading_1": "Про платформу",
-  "text_1": "Платформа, яка поважає Вашу конфіденційність і безпеку. Ваш добробут — наш пріоритет! Usupport надає персоналізовану й ненав'язливу психологічну допомогу.",
+  "text_1": "Платформа, яка поважає Вашу конфіденційність і безпеку. Ваш добробут — наш пріоритет! uSupport надає персоналізовану й ненав'язливу психологічну допомогу.",
   "heading_2": "Про підтримку",
   "text_2": "USupport — це платформа з питань психічного здоров'я, психосоціального розвитку та благополуччя, розроблена для молодих людей і їхніх опікунів, для яких конфіденційність і безпека є пріоритетом. ",
-  "heading_3": "Про Вас.",
-  "text_3": "Будьте найкращим собою! Психічне здоров'я має значення.",
+  "heading_3": "Про Вас",
+  "text_3": "Будьте найкращою версією себе! Ментальне здоров'я має значення.",
   "login": "Увійдіть за допомогою електронної пошти/токена доступу"
 }
