--- a/src/blocks/UserProfile/locales/uk.json
+++ b/src/blocks/UserProfile/locales/uk.json
@@ -9,7 +9,7 @@
   "share_button_label": "Поділитися додатком",
   "contact_us_button_label": "Зв'яжіться з нами",
   "privacy_policy_button_label": "Політика конфіденційності",
-  "FAQ_button_label": "ПОШИРЕНІ ЗАПИТАННЯ",
+  "FAQ_button_label": "Поширені запитання",
   "mood_tracker_button_label": "Відстежувач настрою",
   "payments_history_button_label": "Історія платежів",
   "terms_of_use": "Умови використання",
