Refactor: pl translations

--- a/src/backdrops/EditConsultation/locales/pl.json
+++ b/src/backdrops/EditConsultation/locales/pl.json
@@ -1,8 +1,8 @@
 {
-  "heading": "Zmienić Konsultację",
+  "heading": "Zmień konsultację",
   "subheading": "Wybierz formę komunikacji, która najlepiej odpowiada Twoim potrzebom i uzyskaj pomoc, której potrzebujesz.",
-  "specialist_button_label": "Zmienić specjalistę",
-  "date_button_label": "Zmienić datę i godzinę",
+  "specialist_button_label": "Zmień specjalistę",
+  "date_button_label": "Zmień datę i godzinę",
   "cancel_button_label": "Anulowanie konsultacji",
   "sunday": "Niedz.",
   "monday": "Pon.",
