--- a/src/backdrops/FilterProviders/locales/pl.json
+++ b/src/backdrops/FilterProviders/locales/pl.json
@@ -9,11 +9,11 @@
   "unspecified": "Nieokreślony",
   "not_mentioned": "Wolę nie mówić",
   "provider_type_checkbox_group_label": "Typ konsultanta",
-  "provider_sex_checkbox_group_label": "Gender konsultanta",
+  "provider_sex_checkbox_group_label": "Płeć konsultanta",
   "max_price": "Cena maksymalna",
   "max_price_placeholder": "Wybierz cenę maksymalną",
   "language": "Język",
-  "language_placeholder": "Wybrać język",
+  "language_placeholder": "Wybierz język",
   "providers_free_consultation_label": "Tylko bezpłatna konsultacja",
   "button_label": "Zapisz",
   "reset_filter": "Zresetuj filtry",
