--- a/src/backdrops/FilterQuestions/locales/pl.json
+++ b/src/backdrops/FilterQuestions/locales/pl.json
@@ -3,5 +3,5 @@
     "dropdown_label": "Wybrać tag",
     "cta_label": "Zastosuj filtry",
     "secondary_cta_label": "Zresetuj filtry",
-    "dropdown_placeholder": "Wybrać tag"
+    "dropdown_placeholder": "Wybierz tag"
 }
