--- a/src/backdrops/SafetyFeedback/locales/pl.json
+++ b/src/backdrops/SafetyFeedback/locales/pl.json
@@ -1,5 +1,5 @@
 {
-    "heading": "Czy podczas spotkania czułeś się bezpiecznie?",
+    "heading": "Czy podczas spotkania czułeś/czułaś się bezpiecznie?",
     "subheading": "Opowiedz nam więcej o swoich doświadczeniach z ostatniej konsultacji.",
     "option_yes_label": "Tak",
     "option_no_label": "Nie",
