--- a/src/blocks/CheckoutForm/locales/pl.json
+++ b/src/blocks/CheckoutForm/locales/pl.json
@@ -9,5 +9,5 @@
   "total_heading": "Łącznie: ",
   "timeout_heading": "Sesja płatności wygasła",
   "consultation_timeout": "Twoja rezerwacja została anulowana z powodu braku aktywności. Prosimy o ponowne zaplanowanie konsultacji.",
-  "continue_button": "Kontynuować"
+  "continue_button": "Kontynuuj"
 }
