--- a/src/blocks/Consultations/locales/pl.json
+++ b/src/blocks/Consultations/locales/pl.json
@@ -17,9 +17,9 @@
   "edit": "Edytuj",
   "details": "Zobacz szczegóły",
   "active": "Teraz",
-  "reject": "Odrzucić sugestię",
-  "accept": "Akceptować konsultację",
-  "cancel_consultation": "Anulować konsultację",
+  "reject": "Odrzuć sugestię",
+  "accept": "Akceptuj konsultację",
+  "cancel_consultation": "Anuluj konsultację",
   "suggested": "Sugerowane",
   "view_profile": "Wyświetl profil osobisty",
   "conducted": "Konsultacja zakończona",
