--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -23,6 +23,6 @@
   "wrong_password": "Неверный пароль",
   "submit": "Отправить",
 
-  "dark": "Ciemny",
+  "dark": "Темный",
   "light": "Светлый"
 }
