--- a/src/blocks/ProviderOverview/locales/pl.json
+++ b/src/blocks/ProviderOverview/locales/pl.json
@@ -1,13 +1,13 @@
 {
-  "earliest_slot_label": "Najwcześniejszy dostępny przedział czasowy dla konsultacji",
+  "earliest_slot_label": "Najwcześniejszy dostępny termin konsultacji",
   "languages_label": "Języki",
   "education_label": "Edukacja",
   "work_with_label": "Specjalności",
   "specializations_label": "Specjalizacje",
-  "done_consultations_label": "Ogólnie przeprowadzone konsultacje",
+  "done_consultations_label": "Dotychczas przeprowadzone konsultacje",
   "description_label": "O mnie",
   "edit_details": "Edytuj szczegóły",
-  "change_password": "Zmienić hasło",
+  "change_password": "Zmień hasło",
   "delete_account": "Usuń konto",
   "no_available_slot": "Nie ma dostępnego przedziału czasowego",
   "consultations": "konsultacje",
@@ -22,10 +22,33 @@
   "eating_disorder": "Zaburzenia odżywiania",
   "depression": "Depresja",
   "anxiety": "Niepokój",
-  "panic_attack": "Atak paniki",
+  "panic_attack": "Ataki paniki",
   "relationship": "Związek",
   "personal_development": "Rozwój osobisty",
-  "video_label": "Reprezentacja wideo",
+  "ptsd": "Zespół Stresu Pourazowego (PTSD)",
+  "phobia": "Fobie",
+  "sexuality": "Seksualność i problemy związane z relacjami intymnymi",
+  "lgbtq": "Kwestie LGBTQ+",
+  "goal": "Wyznaczanie celów i rozwój osobisty",
+  "emotional_intelligence": "Inteligencja emocjonalna i samoregulacja",
+  "productivity": "Produktywność i zarządzanie czasem",
+  "self_care": "Praktyki z zakresu samoopieki",
+  "insomnia": "Bezsenność i problemy ze snem",
+  "motivation": "Motywacja i samodoskonalenie",
+  "anger": "Zarządzanie gniewem",
+  "bullying": "Bullying i presja rówieśnicza",
+  "grief": "Żałoba i strata",
+  "gender_identity": "Tożsamość płciowa",
+  "family": "Rodzina i konflikty rodzicielskie",
+  "low_mood": "Złe samopoczucie i dobrostan emocjonalny",
+  "hiv": "HIV/AIDS",
+  "loneliness": "Samotność i izolacja społeczna",
+  "toxic_relationships": "Toksyczne relacje",
+  "love": "Miłość i relacje romantyczne",
+  "social_skills": "Umiejętności społeczne i przyjaźń",
+  "body_image": "Obraz ciała i poczucie własnej wartości",
+
+  "video_label": "Prezentacja wideo",
   "button_label": "Zaplanuj konsultację",
   "hour_consultation": "za 1 godzinę konsultacji"
 }
