--- a/src/blocks/UserDetails/locales/pl.json
+++ b/src/blocks/UserDetails/locales/pl.json
@@ -2,29 +2,29 @@
   "access_token": "Twój anonimowy kod dostępu",
   "change_photo": "Zmienić zdjęcie",
   "nickname": "Nick",
-  "nickname_placeholder": "Wprowadzić swój nick",
+  "nickname_placeholder": "Wprowadź swój nick",
   "nickname_error": "Nick jest wymagany",
-  "email": "E-mail",
-  "email_placeholder": "Wprowadzić swój adres e-mail",
-  "name": "Imie",
+  "email": "Email",
+  "email_placeholder": "Wprowadź swój adres e-mail",
+  "name": "Imię",
   "name_placeholder": "Wpisz swoje imię",
   "surname": "Nazwisko",
   "surname_placeholder": "Wpisz swoje nazwisko",
-  "email_error": "Wprowadź ważny adres e-mail",
+  "email_error": "Wprowadź ważny adres email",
   "sex": "Płeć",
   "year_of_birth": "Rok urodzenia",
   "country": "Kraj",
   "living_place": "Miejsce zamieszkania",
-  "button_text": "Zapisać zmiany",
-  "button_secondary_text": "Odrzucić zmiany",
+  "button_text": "Zapisz zmiany",
+  "button_secondary_text": "Odrzuć zmiany",
   "privacy": "Prywatność i bezpieczeństwo",
   "consent": "Zgoda na wykorzystanie danych osobowych jak określono w <0>Polityce prywatności</0>.",
-  "change_password": "Zmienić hasło",
+  "change_password": "Zmień hasło",
   "delete_account": "Usuń konto",
   "logout": "Wylogowanie",
-  "delete_chat": "Wyczyścić historię czatów",
+  "delete_chat": "Wyczyść historię czatów",
 
-  "dropdown_sex_label": "Gender",
+  "dropdown_sex_label": "Płeć",
   "dropdown_year_label": "Rok urodzenia",
   "sex_male": "Mężczyzna",
   "sex_female": "Kobieta",
@@ -37,7 +37,7 @@
   "data_processing_modal_confirm_button": "Usuń uprawnienia",
   "data_processing_modal_cancel_button": "Anuluj",
   "success_message": "Profil został pomyślnie zaktualizowany",
-  "sex_placeholder": "Wprowadzić swoją płeć",
-  "year_of_birth_placeholder": "Wprowadzić swój rok urodzenia",
-  "living_place_placeholder": "Wprowadzić swoje miejsce zamieszkania"
+  "sex_placeholder": "Wprowadź swoją płeć",
+  "year_of_birth_placeholder": "Wprowadź swój rok urodzenia",
+  "living_place_placeholder": "Wprowadź swoje miejsce zamieszkania"
 }
