--- a/src/modals/PaymentInformation/locales/pl.json
+++ b/src/modals/PaymentInformation/locales/pl.json
@@ -7,7 +7,7 @@
   "payment_method": "Forma płatności: ",
   "recipient": "Odbiorca: ",
   "address": "Adres firmy: ",
-  "email_address": "Adres e-mail: ",
+  "email_address": "Adres email: ",
   "price": "Cena: ",
   "view_receipt": "Wyświetl paragon",
   "text_audio_video_consultation": "Konsultacje online"
