--- a/src/modals/RequireDataAgreement/locales/pl.json
+++ b/src/modals/RequireDataAgreement/locales/pl.json
@@ -4,6 +4,6 @@
   "text2": "Jeśli chcesz dowiedzieć się więcej o tym, jak przetwarzamy dane osobowe, odwiedź naszą ",
   "terms": "Warunki",
   "privacy_policy": "Polityka prywatności",
-  "give_permission": "Udzielać uprawnienia",
+  "give_permission": "Udziel uprawnienia",
   "cancel": "Anuluj"
 }
