--- a/src/pages/InformationPortal/locales/pl.json
+++ b/src/pages/InformationPortal/locales/pl.json
@@ -6,6 +6,6 @@
   "heading_no_language_results": "Nie mogliśmy znaleźć żadnych artykułów opartych na wybranym języku.",
   "view_all": "Wyświetl wszystkie",
   "read_more_button": "Czytaj więcej",
-  "min_read": "min czytać",
+  "min_read": "min czytania",
   "by": "Przez {{creator}}"
 }
