--- a/src/backdrops/SelectConsultation/locales/pl.json
+++ b/src/backdrops/SelectConsultation/locales/pl.json
@@ -1,6 +1,6 @@
 {
   "heading_edit": "Zaproponuj zmianę",
-  "heading_new": "Wybrać czas",
+  "heading_new": "Wybierz czas",
   "subheading_edit": "Sugerować datę i godzinę zmiany terminu tego spotkania.",
   "subheading_new": "Wybierz datę i godzinę spotkania.",
   "cta_button_label": "Zapisz",
