--- a/src/blocks/Login/locales/pl.json
+++ b/src/blocks/Login/locales/pl.json
@@ -1,9 +1,9 @@
 {
-  "email_label": "E-mail / token dostępu",
-  "email_placeholder": "Wprowadzić swój adres e-mail lub token dostępu",
+  "email_label": "Email / token dostępu",
+  "email_placeholder": "Wprowadź swój adres email lub token dostępu",
   "password_label": "Hasło",
   "password_placeholder": "Wprowadź swoje hasło",
-  "forgot_password_label": "Zapomniałem swoje hasło",
+  "forgot_password_label": "Zapomniałem swojego hasła",
   "login_label": "Logowanie",
   "paragraph": "Lub zaloguj się za pomocą:",
   "register_button_label": "Nie mam konta",
