--- a/src/blocks/MascotWelcomeHeader/locales/pl.json
+++ b/src/blocks/MascotWelcomeHeader/locales/pl.json
@@ -5,7 +5,7 @@
   "create_account_button": "Utwórz konto",
   "next_consultation": "Następna konsultacja:",
   "change_button_label": "Zmiana",
-  "accept_button_label": "Akceptować konsultację",
+  "accept_button_label": "Akceptuj konsultację",
   "join_button_label": "Dołącz",
   "schedule_button_label": "Harmonogram",
   "live_label": "Teraz",
