--- a/src/blocks/NotificationPreferences/locales/pl.json
+++ b/src/blocks/NotificationPreferences/locales/pl.json
@@ -1,5 +1,5 @@
 {
-  "email": "Powiadomienia e-mail",
+  "email": "Powiadomienia email",
   "appointment": "Powiadomienia o spotkaniach",
   "minutes_before": "minut przed",
   "success": "Ustawienia powiadomień zostały pomyślnie zapisane"
