--- a/src/blocks/RegisterPreview/locales/pl.json
+++ b/src/blocks/RegisterPreview/locales/pl.json
@@ -1,12 +1,12 @@
 {
   "register_email": "Zarejestruj się za pomocą adresu e-mail",
   "register_anonymously": "Rejestracja bez adresu e-mail",
-  "continue_as_guest": "Kontynuować bez rejestracji",
+  "continue_as_guest": "Kontynuuj bez rejestracji",
   "heading_1": "Informacje o platformie",
-  "text_1": "Platforma, która szanuje twoją prywatność i bezpieczeństwo. Twoje dobre samopoczucie jest naszym priorytetem! Usupport zapewnia spersonalizowaną i dyskretną opiekę psychologiczną.",
+  "text_1": "Platforma, która szanuje twoją prywatność i bezpieczeństwo. Twoje dobre samopoczucie jest naszym priorytetem! uSupport zapewnia spersonalizowaną i dyskretną opiekę psychologiczną.",
   "heading_2": "Informacje o wsparciu",
-  "text_2": "USupport to platforma zdrowia psychicznego, psychospołecznego i dobrego samopoczucia przeznaczona dla młodych ludzi i ich opiekunów, gdzie prywatność i bezpieczeństwo są priorytetem. ",
-  "heading_3": "O tobie",
-  "text_3": "Bądź najlepszym sobą! Twoje zdrowie psychiczne ma znaczenie.",
+  "text_2": "uSupport to platforma poświęcona zdrowiu psychicznemu, dobrostanowi psychospołecznemu i dobremu samopoczuciu, przeznaczona dla młodych ludzi i ich opiekunów, gdzie prywatność i bezpieczeństwo są priorytetem.",
+  "heading_3": "O Tobie",
+  "text_3": "Bądź najlepszą wersją siebie! Twoje zdrowie psychiczne ma znaczenie.",
   "login": "Logowanie za pomocą adresu e-mail/tokenu dostępu"
 }
