--- a/src/blocks/RegisterSupport/locales/pl.json
+++ b/src/blocks/RegisterSupport/locales/pl.json
@@ -1,5 +1,5 @@
 {
-  "button_continue_label": "Kontynuować",
+  "button_continue_label": "Kontynuuj",
   "answer_yes_label": "Tak, chcę konsultacji",
   "answer_no_label": "Nie",
   "modal_heading": "Czy wyrażasz zgodę na przetwarzanie swoich danych osobowych?",
