--- a/src/blocks/SafetyFeedback/locales/pl.json
+++ b/src/blocks/SafetyFeedback/locales/pl.json
@@ -6,12 +6,12 @@
   "q1": "Czy konsultant poprosił Cię o ujawnienie adresu i szczegółów kontaktowych? ",
   "q2": "Czy konsultant poprosił Cię o spotkanie poza systemem (osobiście lub w innej aplikacji)?",
   "q3": "Czy konsultant poprosił cię o przesłanie zdjęć lub włączenie wideo, nawet jeśli tego nie chciałeś?",
-  "q4": "Czy podczas sesji czułeś się w jakikolwiek sposób niebezpiecznie? ",
+  "q4": "Czy podczas sesji czułeś/czułaś się w jakikolwiek sposób zagrożony/zagrożona? ",
   "q5": "Co myślisz o swojej ostatniej sesji?",
   "q6": "Czy Twoje potrzeby zostały odpowiednio zaspokojone? 1-10 (Nie, wcale - Tak, wszystkie)",
   "q7": "Czy wiesz, w jaki sposób możesz poprawić swoje samopoczucie? 1-10 (Nie, wcale - Tak, wszystko jest jasne)",
   "q8": "Porównaj swoje samopoczucie z samopoczuciem sprzed rozpoczęcia sesji. Czy się poprawiło? 1-10 (Nie, jest znacznie gorzej - Nie może być lepiej)",
-  "q9": "Czy chciałabyś/chciałbyś coś dodać? (opcjonalne)",
+  "q9": "Czy chciałabyś/chciałabyś coś dodać? (opcjonalne)",
   "more_details_label": "Jeśli tak, wyjaśnij dlaczego",
   "more_details_placeholder": "Podaj nam więcej szczegółów tutaj.",
   "yes": "Tak",
