--- a/src/modals/MoodTrackMoreInformation/locales/pl.json
+++ b/src/modals/MoodTrackMoreInformation/locales/pl.json
@@ -1,6 +1,6 @@
 {
-  "you_felt": "Poczułeś",
-  "comment_text": "i skomentowałeś",
+  "you_felt": "Poczułaś/poczułeś",
+  "comment_text": "i skomentowałeś/skomentowałaś:",
   "ordinal_st": ".",
   "ordinal_nd": ".",
   "ordinal_rd": ".",
