--- a/src/backdrops/ConfirmConsultation/locales/kk.json
+++ b/src/backdrops/ConfirmConsultation/locales/kk.json
@@ -1,7 +1,7 @@
 {
   "heading": "Кездесуіңіз брондалды",
-  "ctaLabel": "Жалғастыру",
-  "text": "{{startDate}}-шы/ші {{month}} {{year}} күніне {{startTime}} бастап {{endTime}} дейінгі слот үшін. Оны кез келген уақытта қосымша арқылы өзгерте аласыз.",
+  "ctaLabel": "Kontynuuj",
+  "text": "na {{startDate}} {{month}} {{year}} dla terminu od {{startTime}} do {{endTime}}. Można go zmienić w dowolnym momencie za pośrednictwem aplikacji.",
   "january": "қаңтар",
   "february": "ақпан",
   "march": "наурыз",
