--- a/src/pages/ArticleInformation/locales/kk.json
+++ b/src/pages/ArticleInformation/locales/kk.json
@@ -1,7 +1,7 @@
 {
   "heading": "Көбірек мақалалар",
   "no_results": "Таңдалған тілде ұқсас мақалалар жоқ.",
-  "read_more_button": "Read more",
-  "min_read":	"min read",
+  "read_more_button": "Ары қарай оқу",
+  "min_read": "минут оқуға",
   "by": "Дайындаушы {{creator}}"
 }
