--- a/src/pages/ArticleInformation/locales/ru.json
+++ b/src/pages/ArticleInformation/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "heading": "Больше статей",
   "no_results": "На выбранном языке нет похожих статей.",
-  "read_more_button": "Read more",
-  "min_read":	"min read",
+  "read_more_button": "Узнать больше",
+  "min_read": "минут на прочтение",
   "by": "От {{creator}}"
 }
