Add: parent option when selecting year of birth

--- a/src/blocks/RegisterAboutYou/locales/kk.json
+++ b/src/blocks/RegisterAboutYou/locales/kk.json
@@ -18,5 +18,6 @@
   "place_of_living_error": "Өтінеміз, тұрғылықты жеріңізді көрсетіңіз",
   "sex_placeholder": "Жынысыңызды енгізіңіз",
   "year_of_birth_placeholder": "Туған жылыңызды енгізіңіз",
-  "living_place_placeholder": "Тұрғылықты жеріңізді енгізіңіз"
+  "living_place_placeholder": "Тұрғылықты жеріңізді енгізіңіз",
+  "parent": "Ата-ана"
 }
