--- a/src/blocks/RegisterAboutYou/locales/en.json
+++ b/src/blocks/RegisterAboutYou/locales/en.json
@@ -18,5 +18,6 @@
   "place_of_living_error": "Please enter your place of living",
   "sex_placeholder": "Enter your sex",
   "year_of_birth_placeholder": "Enter your year of birth",
-  "living_place_placeholder": "Enter your living place"
+  "living_place_placeholder": "Enter your living place",
+  "parent": "Parent"
 }
