--- a/src/blocks/RegisterAboutYou/locales/pl.json
+++ b/src/blocks/RegisterAboutYou/locales/pl.json
@@ -18,5 +18,6 @@
   "place_of_living_error": "Podaj swoje miejsce zamieszkania",
   "sex_placeholder": "Wprowadź swoją płeć",
   "year_of_birth_placeholder": "Wprowadź swój rok urodzenia",
-  "living_place_placeholder": "Wprowadź swoje miejsce zamieszkania"
+  "living_place_placeholder": "Wprowadź swoje miejsce zamieszkania",
+  "parent": "Rodzic"
 }
