--- a/src/blocks/RegisterAboutYou/locales/ru.json
+++ b/src/blocks/RegisterAboutYou/locales/ru.json
@@ -18,5 +18,6 @@
   "place_of_living_error": "Пожалуйста, укажите свое место жительства",
   "sex_placeholder": "Введите свой пол",
   "year_of_birth_placeholder": "Введите свой год рождения",
-  "living_place_placeholder": "Введите место вашего жительства"
+  "living_place_placeholder": "Введите место вашего жительства",
+  "parent": "Родитель"
 }
