--- a/src/blocks/UserDetails/locales/en.json
+++ b/src/blocks/UserDetails/locales/en.json
@@ -39,5 +39,6 @@
   "success_message": "Profile updated successfully",
   "sex_placeholder": "Enter your sex",
   "year_of_birth_placeholder": "Enter your year of birth",
-  "living_place_placeholder": "Enter your living place"
+  "living_place_placeholder": "Enter your living place",
+  "parent": "Parent"
 }
