--- a/src/blocks/UserDetails/locales/uk.json
+++ b/src/blocks/UserDetails/locales/uk.json
@@ -39,5 +39,6 @@
   "success_message": "Профіль оновлено",
   "sex_placeholder": "Введіть стать",
   "year_of_birth_placeholder": "Введіть рік народження",
-  "living_place_placeholder": "Введіть місце проживання"
+  "living_place_placeholder": "Введіть місце проживання",
+  "parent": "Батько"
 }
