Refactor: the age agreement to display the minAge from the DB

--- a/src/blocks/RegisterAnonymous/locales/en.json
+++ b/src/blocks/RegisterAnonymous/locales/en.json
@@ -15,5 +15,5 @@
   "copy_success": "Code copied successfully",
   "confirm_password_label": "Confirm password",
   "password_match_error": "The Password and Confirm Password fields do not match",
-  "age_terms_agreement_text_1": "I am over 13 years old"
+  "age_terms_agreement_text_1": "I am over {{age}} years old"
 }
