--- a/src/blocks/RegisterAnonymous/locales/pl.json
+++ b/src/blocks/RegisterAnonymous/locales/pl.json
@@ -15,5 +15,5 @@
   "copy_success": "Kod został pomyślnie skopiowany",
   "confirm_password_label": "Potwierdź hasło",
   "password_match_error": "Pola Hasło i Potwierdź hasło nie są zgodne",
-  "age_terms_agreement_text_1": "Mam ponad 13 lat"
+  "age_terms_agreement_text_1": "Mam ponad {{age}} lat"
 }
