--- a/src/blocks/RegisterAnonymous/locales/ru.json
+++ b/src/blocks/RegisterAnonymous/locales/ru.json
@@ -15,5 +15,5 @@
   "copy_success": "Успешно скопированный код",
   "confirm_password_label": "Подтвердите пароль",
   "password_match_error": "Поля Пароль и Подтвердите пароль не совпадают",
-  "age_terms_agreement_text_1": "Мне больше 13 лет"
+  "age_terms_agreement_text_1": "Мне больше {{age}} лет"
 }
