--- a/src/blocks/RegisterAnonymous/locales/uk.json
+++ b/src/blocks/RegisterAnonymous/locales/uk.json
@@ -15,5 +15,5 @@
   "copy_success": "Код скопійовано",
   "confirm_password_label": "Підтвердити пароль",
   "password_match_error": "Поля «Пароль» і «Підтвердити пароль» не збігаються",
-  "age_terms_agreement_text_1": "Мені більше 13 років"
+  "age_terms_agreement_text_1": "Мені більше {{age}} років"
 }
