--- a/src/blocks/RegisterEmail/locales/kk.json
+++ b/src/blocks/RegisterEmail/locales/kk.json
@@ -15,5 +15,5 @@
   "login_button_label": "Менің аккаунтым бар",
   "confirm_password_label": "Құпия сөзді растаңыз",
   "password_match_error": "Құпия сөз және Құпия сөзді растау өрістері сәйкес келмейді",
-  "age_terms_agreement_text_1": "Менің жасым 13-тен үлкен"
+  "age_terms_agreement_text_1": "Менің жасым 10-нан үлкен"
 }
