--- a/src/backdrops/ConfirmConsultation/locales/kk.json
+++ b/src/backdrops/ConfirmConsultation/locales/kk.json
@@ -1,6 +1,6 @@
 {
   "heading": "Кездесуіңіз брондалды",
-  "ctaLabel": "Kontynuuj",
+  "ctaLabel": "Жалғастыру",
   "text": "{{startDate}}-шы/ші {{month}} {{year}} күніне {{startTime}} бастап {{endTime}} дейінгі слот үшін. Оны кез келген уақытта қосымша арқылы өзгерте аласыз.",
   "january": "қаңтар",
   "february": "ақпан",
