Fix: consultation day translation

--- a/src/blocks/Consultations/locales/kk.json
+++ b/src/blocks/Consultations/locales/kk.json
@@ -1,7 +1,7 @@
 {
   "upcoming_tab_label": "Алдағы",
   "past_tab_label": "Бұрынғы",
-  "sunday": "Вс",
+  "sunday": "Жс",
   "monday": "Дс",
   "tuesday": "Сс",
   "wednesday": "Ср",
