--- a/src/blocks/PrivacyPolicy/locales/ru.json
+++ b/src/blocks/PrivacyPolicy/locales/ru.json
@@ -1,3 +1,3 @@
 {
-  "no_results": "Для выбранной страны и языка ничего не нашлось."
+  "no_results": "Для выбранной страны и языка ничего не найдено"
 }
