--- a/src/blocks/ProviderOverview/locales/kk.json
+++ b/src/blocks/ProviderOverview/locales/kk.json
@@ -50,5 +50,6 @@
 
   "video_label": "Бейне-таныстырылым",
   "button_label": "Консультацияны жоспарлау",
-  "hour_consultation": "1 сағаттық консультация үшін"
+  "hour_consultation": "1 сағаттық консультация үшін",
+  "free": "тегін"
 }
