--- a/src/blocks/ProviderOverview/locales/pl.json
+++ b/src/blocks/ProviderOverview/locales/pl.json
@@ -50,5 +50,6 @@
 
   "video_label": "Prezentacja wideo",
   "button_label": "Zaplanuj konsultację",
-  "hour_consultation": "za 1 godzinę konsultacji"
+  "hour_consultation": "za 1 godzinę konsultacji",
+  "free": "bezpłatnie"
 }
