--- a/src/blocks/ProviderOverview/locales/ru.json
+++ b/src/blocks/ProviderOverview/locales/ru.json
@@ -50,5 +50,6 @@
 
   "video_label": "Видео-представление",
   "button_label": "Запланировать консультацию",
-  "hour_consultation": "за 1 часовую консультацию"
+  "hour_consultation": "за 1 часовую консультацию",
+  "free": "бесплатно"
 }
