--- a/src/blocks/ProviderOverview/locales/uk.json
+++ b/src/blocks/ProviderOverview/locales/uk.json
@@ -50,5 +50,6 @@
 
   "video_label": "Відеоряд",
   "button_label": "Записатися на консультацію",
-  "hour_consultation": "за 1 годину консультації"
+  "hour_consultation": "за 1 годину консультації",
+  "free": "безкоштовно"
 }
