--- a/src/blocks/Notifications/locales/en.json
+++ b/src/blocks/Notifications/locales/en.json
@@ -10,6 +10,7 @@
   "consultation_suggestion_booking": "You accepted the <0>suggested</0> consultation from <0>{{providerName}}</0> on <0>{{date}}</0> from <0>{{startHour}}</0> to <0>{{endHour}}</0>",
   "consultation_suggestion_cancellation": "You rejected the <0>suggested</0> consultation from <0>{{providerName}}</0> on <0>{{date}}</0> from <0>{{startHour}}</0> to <0>{{endHour}}</0>",
   "consultation_started": "Your consultation with provider <0>{{providerName}} started</0>",
+  "question_answered": "<0>{{providerName}}</0> answered your question",
   "join": "Join",
   "accept": "Accept",
   "accept_consultation_success": "Succesfully accepted consultation",
