--- a/src/blocks/Notifications/locales/kk.json
+++ b/src/blocks/Notifications/locales/kk.json
@@ -10,6 +10,7 @@
   "consultation_suggestion_booking": "Сіз <0>{{providerName}}</0> ұсынған <0>{{date}}</0> күнгі <0>{{startHour}}</0> бастап <0>{{endHour}}</0> дейін берілетін консультацияны қабылдадыңыз",
   "consultation_suggestion_cancellation": "Сіз <0>{{providerName}}</0> ұсынған <0>{{date}}</0> күнгі <0>{{startHour}}</0> бастап <0>{{endHour}}</0> дейін берілетін консультациядан бас тарттыңыз.",
   "consultation_started": "Сіздің {{providerName}} консультантпен консультацияңыз басталды",
+  "question_answered": "<0>{{providerName}}</0> сіздің сұрауыңызды жауап берді",
   "join": "Қосылу",
   "accept": "Қабылдау",
   "accept_consultation_success": "Консультация сәтті қабылданды",
