--- a/src/blocks/Notifications/locales/uk.json
+++ b/src/blocks/Notifications/locales/uk.json
@@ -10,6 +10,7 @@
   "consultation_suggestion_booking": "Ви прийняли запропоновану консультацію від {{providerName}} на {{date}} від {{startHour}} до {{endHour}}",
   "consultation_suggestion_cancellation": "Ви відхилили запропоновану консультацію з {{providerName}} на {{date}} з {{startHour}} на {{endHour}}",
   "consultation_started": "Ваша консультація з консультантом(кою)(кою) {{providerName}} розпочалася",
+  "question_answered": "{{providerName}} відповів(ла) на ваше питання",
   "join": "Приєднатися",
   "accept": "Прийняти",
   "accept_consultation_success": "Консультацію прийнято",
