--- a/src/pages/Consultation/locales/kk.json
+++ b/src/pages/Consultation/locales/kk.json
@@ -29,5 +29,7 @@
   "search": "Іздеу",
   "sponsored_by": "Бұл сессияның демеушісі: ",
   "consultation_end_reminder": "Ваша консультация закончится через {{minutes}} минут",
-  "textarea_placeholder": "Хабарламаңызды осы жерге енгізіңіз..."
+  "textarea_placeholder": "Хабарламаңызды осы жерге енгізіңіз...",
+  "permissions_error": "Сіз рұқсаттарды қабылдамадыңыз",
+  "allow_permissions": "Камера және/немесе микрофонға рұқсаттар қабылданбады. Егер сіз провайдермен сөйлескіңіз келсе, шолғыштың параметрлерінде немесе мекенжай жолындағы ақпарат белгішесінде рұқсаттарды қосыңыз."
 }
