--- a/src/blocks/MyQA/locales/kk.json
+++ b/src/blocks/MyQA/locales/kk.json
@@ -12,5 +12,6 @@
   "your_questions": "Сіздің сұрағыңыз",
   "search_placeholder": "Іздеу",
   "filter": "Тегтерді сүзгілеу",
-  "no_answers_found": "Сұрақтарға жауап жоқ"
+  "no_answers_found": "Сұрақтарға жауап жоқ",
+  "language": "Тіл"
 }
