--- a/src/blocks/MyQA/locales/pl.json
+++ b/src/blocks/MyQA/locales/pl.json
@@ -12,5 +12,6 @@
   "your_questions": "Twoje pytanie",
   "search_placeholder": "Wyszukiwanie",
   "filter": "Filtruj tagi",
-  "no_answers_found": "Nie ma odpowiedzi na żadne pytania"
+  "no_answers_found": "Nie ma odpowiedzi na żadne pytania",
+  "language": "Język"
 }
