--- a/src/blocks/MyQA/locales/ru.json
+++ b/src/blocks/MyQA/locales/ru.json
@@ -12,5 +12,6 @@
   "your_questions": "Ваш вопрос",
   "search_placeholder": "Поиск",
   "filter": "Фильтровать теги",
-  "no_answers_found": "Нет ответов на вопросы"
+  "no_answers_found": "Нет ответов на вопросы",
+  "language": "Язык"
 }
