Fix: translations in moodtracker

--- a/src/blocks/MoodTrackHistory/locales/en.json
+++ b/src/blocks/MoodTrackHistory/locales/en.json
@@ -1,6 +1,6 @@
 {
-  "happy": "Perfect",
-  "good": "Happy",
+  "happy": "Happy",
+  "good": "Good",
   "sad": "Sad",
   "depressed": "Depressed",
   "worried": "Worried",
