--- a/src/blocks/MoodTrackHistory/locales/ru.json
+++ b/src/blocks/MoodTrackHistory/locales/ru.json
@@ -1,9 +1,9 @@
 {
-  "happy": "Отлично",
-  "good": "Счастливо",
-  "sad": "Грустно",
+  "happy": "Счастливый",
+  "good": "Хороший",
+  "sad": "Грустный",
   "depressed": "В депрессии",
-  "worried": "Взволнованно",
+  "worried": "Взволнованный",
   "you_felt": "Вы почувствовали",
   "comment_text": "и Вы прокомментировали:",
   "no_result": "Ничего не нашлось"
