--- a/src/blocks/MoodTracker/locales/kk.json
+++ b/src/blocks/MoodTracker/locales/kk.json
@@ -1,6 +1,6 @@
 {
-  "happy": "Керемет",
-  "good": "Бақытты",
+  "happy": "Бақытты",
+  "good": "Жақсы",
   "sad": "Қайғылы",
   "depressed": "Депрессияда",
   "worried": "Қобалжыған",
