--- a/src/blocks/MoodTracker/locales/pl.json
+++ b/src/blocks/MoodTracker/locales/pl.json
@@ -1,9 +1,9 @@
 {
-  "happy": "Doskonały",
-  "good": "Szczęśliwy",
-  "sad": "Smutny",
-  "depressed": "Przygnębiony",
-  "worried": "Zmartwiony",
+  "happy": "Szczęśliwy/Szęśliwa",
+  "good": "Dobrze",
+  "sad": "Smutny/Smutna",
+  "depressed": "Przygnębiony/Przygnębiona",
+  "worried": "Zmartwiony/Zmartwiona",
   "heading": "Jak się dziś czujesz?",
   "mood_tracker": "Monitor nastroju",
   "additional_comment_placeholder": "Co sprawiło, że tak się poczułeś?",
