--- a/src/blocks/MoodTracker/locales/ru.json
+++ b/src/blocks/MoodTracker/locales/ru.json
@@ -1,6 +1,6 @@
 {
-  "happy": "Отлично",
-  "good": "Счастливый",
+  "happy": "Счастливый",
+  "good": "Хороший",
   "sad": "Грустный",
   "depressed": "В депрессии",
   "worried": "Взволнованный",
