--- a/src/blocks/MoodTracker/locales/uk.json
+++ b/src/blocks/MoodTracker/locales/uk.json
@@ -1,6 +1,6 @@
 {
-  "happy": "Чудово.",
-  "good": "Щастя",
+  "happy": "Щастя",
+  "good": "Добре",
   "sad": "Сум",
   "depressed": "Пригнічення",
   "worried": "Хвилювання",
