--- a/src/blocks/MoodTrackHistory/locales/kk.json
+++ b/src/blocks/MoodTrackHistory/locales/kk.json
@@ -1,9 +1,9 @@
 {
-  "happy": "Керемет",
-  "good": "Бақытты",
+  "happy": "Бақытты",
+  "good": "Жақсы",
   "sad": "Қайғылы",
   "depressed": "Депрессияда",
-  "worried": "Қобалжыған болып",
+  "worried": "Қобалжыған",
   "you_felt": "Сіз сездіңіз",
   "comment_text": "және Сіз түсініктеме бердіңіз:",
   "no_result": "Ештеңе табылмады"
