Refactor: hide coupon input from SelectConsultation and hide the calendar if there is no earliest slot for the provider

--- a/src/backdrops/SelectConsultation/locales/en.json
+++ b/src/backdrops/SelectConsultation/locales/en.json
@@ -26,5 +26,6 @@
   "sa": "Sa",
   "coupon_code": "Coupon code",
   "apply_coupon": "Apply coupon",
-  "remove_coupon": "Remove coupon"
+  "remove_coupon": "Remove coupon",
+  "provider_not_available": "The provider has no available slots"
 }
