--- a/src/backdrops/SelectConsultation/locales/kk.json
+++ b/src/backdrops/SelectConsultation/locales/kk.json
@@ -26,5 +26,6 @@
   "sa": "Сб",
   "coupon_code": "Купон коды",
   "apply_coupon": "Купонды қолдану",
-  "remove_coupon": "Купонды жою"
+  "remove_coupon": "Купонды жою",
+  "provider_not_available": "Консультант бос орындары жоқ."
 }
