--- a/src/backdrops/SelectConsultation/locales/pl.json
+++ b/src/backdrops/SelectConsultation/locales/pl.json
@@ -26,5 +26,6 @@
   "sa": "Sob.",
   "coupon_code": "Kod kuponu",
   "apply_coupon": "Zastosuj kupon",
-  "remove_coupon": "Usuń kupon"
+  "remove_coupon": "Usuń kupon",
+  "provider_not_available": "Dostawca nie ma dostępnych terminów."
 }
