--- a/src/backdrops/SelectConsultation/locales/uk.json
+++ b/src/backdrops/SelectConsultation/locales/uk.json
@@ -26,5 +26,6 @@
   "sa": "Сб",
   "coupon_code": "Код купона",
   "apply_coupon": "Застосувати купон",
-  "remove_coupon": "Видалити купон"
+  "remove_coupon": "Видалити купон",
+  "provider_not_available": "У консультанта немає вільних слотів."
 }
