Fix: Mood tracker labels in polish

--- a/src/blocks/MoodTrackHistory/locales/pl.json
+++ b/src/blocks/MoodTrackHistory/locales/pl.json
@@ -1,9 +1,9 @@
 {
-  "happy": "Szczęśliwy/Szęśliwa",
-  "good": "Dobrze",
-  "sad": "Smutny/Smutna",
-  "depressed": "Przygnębiony/Przygnębiona",
-  "worried": "Zmartwiony/Zmartwiona",
+  "happy": "Szczęśliwy",
+  "good": "Dobry",
+  "sad": "Smutny",
+  "depressed": "Przygnębiony",
+  "worried": "Zmartwiony",
   "you_felt": "Poczułeś/Poczułaś",
   "comment_text": "i skomentowałeś/skomentowałaś:",
   "no_result": "Nie znaleziono żadnych wyników."
